--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ MODEL=claude-3-5-haiku-20241022
 
 # Optional: Adjust max tokens for conversation history
 MAX_CONVERSATION_TOKENS=100000
+
+# For calendar access
+GOOGLE_CLIENT_ID=YOUR_CLIENT_ID
+GOOGLE_CLIENT_SECRET=YOUR_CLIENT_SECRET
