--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "main": "dist/main.js",
   "scripts": {
     "start": "tsx src/main.ts",
+    "server": "tsx src/server/index.ts",
+    "dev:server": "tsx watch src/server/index.ts",
     "build": "tsc",
     "dev": "tsx src/main.ts --hot"
   },
@@ -20,12 +22,17 @@
   "license": "MIT",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.30.0",
+    "cors": "^2.8.6",
     "dotenv": "^17.3.1",
+    "express": "^5.2.1",
     "fs-extra": "^11.3.3",
     "googleapis": "^171.4.0",
     "tiktoken": "^1.0.22"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.11.0",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
